--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_simple_list_view">SimpleListViewActivity</string>
+    <string name="title_activity_custom_array_list_view">CustomArrayListViewActivity</string>
+    <string name="empty"/>
+    <string name="add_new_item"> Add Item </string>
 
 </resources>
